--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <a class="nav-link" href="#pricing">Pricing</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="#footer">Booking</a>
         </li>
       </ul>
     </div>
@@ -48,49 +48,51 @@
 
   <section class="carousel">
     <ol class="carousel__viewport">
+   
+      <li class="carousel__slide">
+        <div class="carousel__snapper" style="background-image: url('img/Carousel/manny-moreno-X9TEqJWmM6Q-unsplash.jpg')">
+          <div class="text-content"> <h4 class="text text-center"><a href="#">Great Barrier Reef</a></h4>
+            <p class="text text-center">world's largest coral reef system, composed of over 2,900 individual Reefs.</p>
+            </div></div>
+      </li>
+      <li class="carousel__slide">
+        <div class="carousel__snapper" style="background-image: url('img/Carousel/johannes-plenio-OwMTchwUTNw-unsplash.jpg')">
+          <div class="text-content"> <h4 class="text text-center"><a href="#">Neuschwanstein Castle</a></h4>
+            <p class="text text-center">Neuschwanstein Castle is a 19th-century historicist palace on a rugged hill of the foothills of the Alps in the very south of Germany, just north of Austria.</p>
+            </div></div>
+      </li>
+      <li class="carousel__slide">
+        <div class="carousel__snapper" style="background-image: url('img/Carousel/giau-tran-ZMdXvd6jGww-unsplash.jpg')">
+          <div class="text-content"> <h4 class="text text-center"><a href="#">Hạ Long Bay</a></h4>
+            <p class="text text-center">Hạ Long Bay, in northeast Vietnam, is known for its emerald waters and thousands of towering limestone islands topped by rainforests</p>
+            </div></div>
+      </li>
+      <li class="carousel__slide">
+        <div class="carousel__snapper" style="background-image: url('img/Carousel/hibeth-rodriguez-X3yw_RkWFjw-unsplash.jpg')">
+          <div class="text-content"> <h4 class="text text-center"><a href="#">Machu Picchu</a></h4>
+            <p class="text text-center">Machu Picchu is an Incan citadel set high in the Andes Mountains in Peru, above the Urubamba River valley.</p>
+            </div></div>
+      </li>
+      <li class="carousel__slide">
+        <div class="carousel__snapper" style="background-image: url('img/Carousel/joonyeop-baek-1kf69eE7VR4-unsplash.jpg')">
+          <div class="text-content"> <h4 class="text text-center"><a href="#">Golden Gate Bridge</a></h4>
+            <p class="text text-center">The Golden Gate Bridge is a suspension bridge spanning the Golden Gate, the one-mile-wide strait connecting San Francisco Bay and the Pacific Ocean.</p>
+            </div></div>
+      </li>
+  
+      <li class="carousel__slide">
+        <div class="carousel__snapper" style="background-image: url('img/Carousel/jeremy-manoto-Fa4CYs-UubI-unsplash.jpg')">
+          <div class="text-content"> <h4 class="text text-center"><a href="#">Milford Sound / Piopiotahi</a></h4>
+            <p class="text text-center">Milford Sound is a fiord in the southwest of New Zealand's South Island.The fiord is home to fur seal colonies, penguins and dolphins. .</p>
+            </div></div>
+      </li>
       <li class="carousel__slide">
         <div class="carousel__snapper" style="background-image: url('img/Carousel/pexels-alex-azabache-3879071.jpg')">
        <div class="text-content">
-        <h4 class="text text-center">Place Name</h4>
-        <p class="text text-center">Lorem ipsum dolor sit. Lorem, ipsum dolor. <a href="#">Visit Now</a></p>
+        <h4 class="text text-center"><a href="#">Eiffel Tower</a></h4>
+        <p class="text text-center">The Eiffel Tower is a wrought-iron lattice tower on the Champ de Mars in Paris, France.</p>
         
       </div></div>
-      </li>
-      <li class="carousel__slide">
-        <div class="carousel__snapper" style="background-image: url('img/Carousel/pexels-anas-hinde-3249412.jpg')">
-          <div class="text-content"> <h4 class="text text-center">Place Name</h4>
-            <p class="text text-center">Lorem ipsum dolor sit. Lorem, ipsum dolor. <a href="#">Visit Now</a></p>
-            </div></div>
-      </li>
-      <li class="carousel__slide">
-        <div class="carousel__snapper" style="background-image: url('img/Carousel/pexels-jeff-guab-2407636.jpg')">
-          <div class="text-content"> <h4 class="text text-center">Place Name</h4>
-            <p class="text text-center">Lorem ipsum dolor sit. Lorem, ipsum dolor. <a href="#">Visit Now</a></p>
-            </div></div>
-      </li>
-      <li class="carousel__slide">
-        <div class="carousel__snapper" style="background-image: url('img/Carousel/pexels-kin-pastor-777059.jpg')">
-          <div class="text-content"> <h4 class="text text-center">Place Name</h4>
-            <p class="text text-center">Lorem ipsum dolor sit. Lorem, ipsum dolor. <a href="#">Visit Now</a></p>
-            </div></div>
-      </li>
-      <li class="carousel__slide">
-        <div class="carousel__snapper" style="background-image: url('img/Carousel/pexels-mohamad-tamer-2406731.jpg')">
-          <div class="text-content"> <h4 class="text text-center">Place Name</h4>
-            <p class="text text-center">Lorem ipsum dolor sit. Lorem, ipsum dolor. <a href="#">Visit Now</a></p>
-            </div></div>
-      </li>
-      <li class="carousel__slide">
-        <div class="carousel__snapper" style="background-image: url('img/Carousel/pexels-pierre-blaché-3073666.jpg')">
-          <div class="text-content"> <h4 class="text text-center">Place Name</h4>
-            <p class="text text-center">Lorem ipsum dolor sit. Lorem, ipsum dolor. <a href="#">Visit Now</a></p>
-            </div></div>
-      </li>
-      <li class="carousel__slide">
-        <div class="carousel__snapper" style="background-image: url('img/Carousel/pexels-stijn-dijkstra-2659475.jpg')">
-          <div class="text-content"> <h4 class="text text-center">Place Name</h4>
-            <p class="text text-center">Lorem ipsum dolor sit. Lorem, ipsum dolor. <a href="#">Visit Now</a></p>
-            </div></div>
       </li>
     </ol>
   </section>
@@ -116,9 +118,10 @@
         <div class="col-md-4 col-sm-12 pl-5 pr-5">
           <div class="container">
             <h4 class="text-center">Why Visit Kyoto</h4>
-            <p class=" text-center text-justify pl-5 pr-5"> Kyoto, the cultural heart of Japan, beckons with its timeless allure. Visitors flock to this city for its exquisite temples, traditional tea houses, and picturesque gardens, immersing themselves in the elegance of ancient Japan. With every cherry blossom tree and every intricately designed shrine, Kyoto whispers tales of history, making it a must-visit destination for those seeking the soul of the country.</p>
+            <div class="content">
+            <p class="text-justify pl-5 pr-5"> Kyoto, the cultural heart of Japan, beckons with its timeless allure. Visitors flock to this city for its exquisite temples, traditional tea houses, and picturesque gardens, immersing themselves in the elegance of ancient Japan. With every cherry blossom tree and every intricately designed shrine, Kyoto whispers tales of history, making it a must-visit destination for those seeking the soul of the country.</p></div>
             <a href="">
-              <p class="text-uppercase text-center">Visit Now</p>
+              <p class="text-uppercase text-center pt-4">Visit Now</p>
             </a>
           </div>
         </div>
@@ -142,9 +145,10 @@
         <div class="col-md-4 col-sm-12 pl-5 pr-5">
           <div class="container">
             <h4 class="text-center">Kyoto's Enchanting History</h4>
-            <p class=" text-center text-justify pl-5 pr-5">Kyoto's magnetic allure lies in its thrilling past, once the imperial seat of Japan. With tales of samurai legends, feudal wars, and the grace of geishas, its historic streets and iconic sites like Kinkaku-ji and Fushimi Inari Shrine offer a captivating glimpse into centuries of Japanese history. Travelers are drawn to Kyoto's enigmatic charm, making it a must-visit destination for history enthusiasts.</p>
+            <div class="content">
+            <p class="text-justify pl-5 pr-5">Kyoto's magnetic allure lies in its thrilling past, once the imperial seat of Japan. With tales of samurai legends, feudal wars, and the grace of geishas, its historic streets and iconic sites like Kinkaku-ji and Fushimi Inari Shrine offer a captivating glimpse into centuries of Japanese history. Travelers are drawn to Kyoto's enigmatic charm, making it a must-visit destination for history enthusiasts.</p></div>
             <a href="">
-              <p class="text-uppercase text-center">Read More</p>
+              <p class="text-uppercase text-center pt-4">Read More</p>
             </a>
           </div>
         </div>
@@ -168,9 +172,10 @@
           <div class="col-md-4 col-sm-12 pl-5 pr-5">
             <div class="container">
               <h4 class="text-center">Why Visit Kerala</h4>
-              <p class=" text-center pl-5 pr-5">Kerala is a must visit with its tranquil backwaters, lush tea plantations, and pristine beaches, Kerala offers a serene escape into nature's embrace. Renowned for its Ayurvedic treatments and vibrant cultural festivals, it's a haven for relaxation and cultural exploration, making it a must-visit destination for anyone seeking a harmonious blend of natural beauty and cultural richness in India.</p>
+              <div class="content">
+              <p class="text-justify  pl-5 pr-5">Kerala is a must visit with its tranquil backwaters, lush tea plantations, and pristine beaches, Kerala offers a serene escape into nature's embrace. Renowned for its Ayurvedic treatments and vibrant cultural festivals, it's a haven for relaxation and cultural exploration, making it a must-visit destination for anyone seeking a harmonious blend of natural beauty and cultural richness in India.</p></div>
               <a href="">
-                <p class="text-uppercase text-center">Visit Now</p>
+                <p class="text-uppercase text-center pt-4">Visit Now</p>
               </a>
             </div>
           </div>
@@ -194,9 +199,10 @@
           <div class="col-md-4 col-sm-12 pl-5 pr-5">
             <div class="container">
               <h4 class="text-center">Kerala's Attracting History</h4>
-              <p class="text-center pl-5 pr-5">Kerala, rich in history, invites travelers with tales of ancient dynasties, colonial influences, and spice trade. Its historic forts and maritime heritage tell stories of diverse cultures, captivating those seeking a thrilling glimpse into the past. This blend of history and natural beauty makes Kerala an irresistible destination for curious travelers</p>
+              <div class="content">
+              <p class="text-justify pl-5 pr-5">Kerala, rich in history, invites travelers with tales of ancient dynasties, colonial influences, and spice trade. Its historic forts and maritime heritage tell stories of diverse cultures, captivating those seeking a thrilling glimpse into the past. This blend of history and natural beauty makes Kerala an irresistible destination for curious travelers</p></div>
               <a href="">
-                <p class="text-uppercase text-center">Read More</p>
+                <p class="text-uppercase text-center pt-4">Read More</p>
               </a>
             </div>
           </div>
@@ -223,9 +229,10 @@
           <div class="col-md-4 col-sm-12 pl-5 pr-5">
             <div class="container">
               <h4 class="text-center">Why Visit Paris</h4>
-              <p class=" text-center pl-5 pr-5">Visiting France is an immersive journey into art, history, and culinary excellence. From the iconic charm of Paris to the picturesque vineyards of Bordeaux, every region has unique cultural experience. Delight in world-class museums, indulge in exquisite wines and cuisine, and wander through medieval villages. France's timeless allure lies in its ability to blend rich heritage with modern sophistication.</p>
+              <div class="content">
+              <p class=" text-justify pl-5 pr-5">Visiting France is an immersive journey into art, history, and culinary excellence. From the iconic charm of Paris to the picturesque vineyards of Bordeaux, every region has unique cultural experience. Delight in world-class museums, indulge in exquisite wines and cuisine, and wander through medieval villages. France's timeless allure lies in its ability to blend rich heritage with modern sophistication.</p></div>
               <a href="">
-                <p class="text-uppercase text-center">Visit Now</p>
+                <p class="text-uppercase text-center pt-4">Visit Now</p>
               </a>
             </div>
           </div>
@@ -249,9 +256,10 @@
           <div class="col-md-4 col-sm-12 pl-5 pr-5">
             <div class="container">
               <h4 class="text-center">Tracing France's History</h4>
-              <p class="text-center pl-5 pr-5">Explore France's rich heritage, from medieval castles to revolutionary landmarks. Walk the paths of kings, witness art's Renaissance, and delve into stories of revolution. France's history, a captivating tale of triumphs and transformations, invites travelers to unravel its intriguing past, creating a profound connection with the country's enduring allure</p>
+              <div class="content">
+              <p class="text-justify pl-5 pr-5">Explore France's rich heritage, from medieval castles to revolutionary landmarks. Walk the paths of kings, witness art's Renaissance, and delve into stories of revolution. France's history, a captivating tale of triumphs and transformations, invites travelers to unravel its intriguing past, creating a profound connection with the country's enduring allure</p></div>
               <a href="">
-                <p class="text-uppercase text-center">Read More</p>
+                <p class="text-uppercase text-center pt-4">Read More</p>
               </a>
             </div>
           </div>
@@ -341,12 +349,12 @@
         <div class="col-md-3 col-sm-12 pl-5 mt-5">
           <h5 class="text-head">Features</h5>
         <ul class="list-unstyled text-small">
-          <li><a class="text-footer" href="#">Cool stuff</a></li>
-          <li><a class="text-footer" href="#">Random feature</a></li>
-          <li><a class="text-footer" href="#">Team feature</a></li>
-          <li><a class="text-footer" href="#">Stuff for developers</a></li>
-          <li><a class="text-footer" href="#">Another one</a></li>
-          <li><a class="text-footer" href="#">Last time</a></li>
+          <li><a class="text-footer" href="#">Booking</a></li>
+          <li><a class="text-footer" href="#">offers</a></li>
+          <li><a class="text-footer" href="#">customer support</a></li>
+          <li><a class="text-footer" href="#">Customize Package</a></li>
+          <li><a class="text-footer" href="#">Newsletter</a></li>
+          <li><a class="text-footer" href="#">Terms & Conditions</a></li>
         </ul>
         </div>
         <div class="col-md-6 col-sm-12 typography">
@@ -375,14 +383,14 @@
          
         </div>
         <div class="col-md-3 col-sm-12 pr-5 pl-5 mt-5">
-          <h5 class="text-head">Features</h5>
+          <h5 class="text-head">Top International Hotels</h5>
           <ul class="list-unstyled text-small">
-            <li><a class="text-footer" href="#">Cool stuff</a></li>
-            <li><a class="text-footer" href="#">Random feature</a></li>
-            <li><a class="text-footer" href="#">Team feature</a></li>
-            <li><a class="text-footer" href="#">Stuff for developers</a></li>
-            <li><a class="text-footer" href="#">Another one</a></li>
-            <li><a class="text-footer" href="#">Last time</a></li>
+            <li><a class="text-footer" href="#">The Plaza New York</a></li>
+            <li><a class="text-footer" href="#">Adaaran Club Rannalhi</a></li>
+            <li><a class="text-footer" href="#">Marina Bay Sands Singapore</a></li>
+            <li><a class="text-footer" href="#">The Palm Dubai</a></li>
+            <li><a class="text-footer" href="#">Bangkok Palace Hotel</a></li>
+            <li><a class="text-footer" href="#">Taj Exotica Resort Maldives</a></li>
           </ul>
         </div>
       </div>
